# Velaria

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  MODULE.bazel  README-zh.md  README.md  WORKSPACE
.github/workflows/: ci.yml  release.yml
app/: electron-builder.yml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
app/scripts/: build-sidecar-macos.sh  fix-renderer-paths.mjs  package-macos.sh
app/src/main/: main.js  main.ts
app/src/preload/: preload.js  preload.ts
app/src/renderer/: App.tsx  i18n.ts  index.html  renderer.js  styles.css  types.d.ts  types.ts
docs/: agentic-service-api.md  benchmarks-zh.md  benchmarks.md  core-boundary.md  development-zh.md  development.md  local_vector_search_v01.md  runtime-contract.md  streaming_runtime_design.md
plans/: README-zh.md  README.md  agentic-event-data-platform-v1.md  agentic-event-model-v1.md  agentic-monitor-execution-v1.md  agentic-rule-dsl-v1.md  agentic-search-grounding-v1.md  agentic-user-journeys-v1.md  ai-plugin-interface-v1.md  analytical-storage-format-v1.md  build-system.md  core-runtime-columnar-plan.md  dataframe-first-v1.md  electron-dmg-packaging-v1.md  pg_query_frontend_spike.md  python-api-v1.md  review-dataframe-first-v1.md  stream-sql-v1.md  streaming-first-roadmap.md  visual-data-app-shape-v1.md  visual-data-app-v1.md  visual-data-app-workflows-v1.md
python/: BUILD.bazel  README.md  pyproject.toml  sync_native_extension.py  velaria_mcp.py  version.bzl
python/benchmarks/: bench_realtime_stream.py  bench_realtime_wrapper_stress.py
python/examples/: README.md  demo_batch_sql_arrow.py
python/tests/: test_agentic_service.py  test_ai_runtime_agent.py  test_artifact_index.py  test_bitable_group_by_owner_integration.py  test_bitable_stream_source.py  test_claude_runtime.py  test_embedding_pipeline.py  test_python_cli_contract.py  test_read_excel.py  test_source_materialization.py  test_streaming_v05.py  test_velaria_service.py
python/tests/fixtures/: csi300_normalized.csv
python/velaria/: __main__.py  agentic_dsl.py  agentic_runtime.py  ai_provider.py  bitable.py  custom_stream.py  embedding.py  keyword_index.py
python/velaria/ai_runtime/: __init__.py  _runtime_common.py  _tools.py  agent.py  claude_runtime.py  codex_runtime.py  functions.py  mcp_server.py  session_registry.py  sql_catalog.py
python/velaria/cli/: __init__.py  _common.py  agentic.py  ai_cmd.py  artifacts.py  datasets.py  embedding.py  file_sql.py  interactive.py  run_cmd.py  vector_search.py
python/velaria_service/: __init__.py  __main__.py  _helpers.py  _router.py  agentic_handlers.py  ai_handlers.py  analysis_handlers.py  dataset_handlers.py  import_handlers.py  search_handlers.py
python_api/: BUILD.bazel  README.md  bench_arrow_ingestion.py  demo_stream_sql.py  pyproject.toml  sync_native_extension.py  velaria_cli.py  velaria_service.py  version.bzl
python_api/benchmarks/: bench_embedding_pipeline.py  bench_embedding_recall.py  bench_realtime_wrapper_stress.py  bench_stage_paths.py
python_api/examples/: README.md  demo_bitable_group_by_owner.py  demo_embedding_pipeline.py  demo_stream_sql.py  demo_vector_search.py
python_api/experimental/: README.md
python_api/tests/: test_agentic_dsl.py  test_agentic_service.py  test_agentic_store.py  test_arrow_stream_ingestion.py  test_artifact_index.py  test_bitable_stream_source.py  test_custom_stream_source.py  test_embedding_pipeline.py  test_file_sources.py  test_python_cli_contract.py  test_source_materialization.py  test_streaming_v05.py  test_vector_search.py  test_velaria_service.py  test_workspace_runs.py
python_api/tests/fixtures/: employee_import_mock.xlsx
python_api/velaria/: __init__.py  agentic_runtime.py  agentic_search.py  agentic_store.py  agentic_templates.py  bitable.py  cli.py  custom_stream.py  embedding.py  excel.py  keyword_index.py
python_api/velaria.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python_api/velaria/workspace/: __init__.py  artifact_index.py  paths.py  run_store.py  types.py
scripts/: BUILD.bazel  build_dashboard_frontend.sh  build_native_wheel.py  build_py_cli_executable.sh  bump_velaria_version.sh  generate_stage_benchmark_fixture.py  get_velaria_version.sh  lsan_pyarrow.supp  normalize_wheel_filename.py  prepare_velaria_release.sh  run_actor_rpc_e2e.sh  run_actor_rpc_scheduler.sh  run_core_regression.sh  run_experimental_regression.sh  run_python_ci_checks.sh  run_python_ecosystem_regression.sh  run_python_stage_benchmark.sh  run_python_wrapper_leak_smoke.sh  run_python_wrapper_sanitizer.sh  run_stream_observability_regression.sh  run_vector_search_benchmark.sh  validate_native_wheel.py  verify_release_simd.py
skills/velaria_python_local/: SKILL.md
skills/velaria_python_local/scripts/: query_bitable_to_sql.py  query_csv_to_sql.py  query_excel_to_sql.py  read_xlsx.py  smoke.py
skills/velaria_sql_capabilities/: SKILL.md
src/dataflow/ai/: plugin_runtime.cc  plugin_runtime.h
src/dataflow/api/: dataframe.cc  dataframe.h  session.cc  session.h
src/dataflow/catalog/: catalog.cc  catalog.h
src/dataflow/core/: csv.cc  csv.h  table.cc  table.h  value.cc  value.h
src/dataflow/examples/: actor_rpc_client.cc  actor_rpc_scheduler.cc  actor_rpc_smoke.cc  actor_rpc_worker.cc  batch_aggregate_benchmark.cc  dataframe_demo.cc  dataframe_demo.cpp  file_source_benchmark.cc  float_simd_benchmark.cc  sql_demo.cc  sql_demo.cpp  stream_actor_benchmark.cc  stream_benchmark.cc  stream_demo.cc  stream_sql_demo.cc  stream_state_container_demo.cc  stream_state_container_demo.cpp  stream_stateful_demo.cc  stream_stateful_demo.cpp  string_builtin_benchmark.cc  tpch_q1_style_benchmark.cc  vector_search_benchmark.cc  velaria_cli.cc  wordcount.cc  wordcount.cpp
src/dataflow/planner/: plan.cc  plan.h
src/dataflow/python/: python_module.cc
src/dataflow/rpc/: actor_rpc_codec.cc  actor_rpc_codec.h  rpc_codec.cc  rpc_codec.h  serialization.cc  serialization.h
src/dataflow/runner/: actor_runtime.cc  actor_runtime.h
src/dataflow/runtime/: actor_runtime.cc  (+13 more)
tools/: BUILD.bazel  python_configure.bzl
(+128 files in other folders)
