load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "dataflow_core",
    srcs = [
        "src/dataflow/core/value.cc",
        "src/dataflow/core/table.cc",
        "src/dataflow/core/csv.cc",
        "src/dataflow/catalog/catalog.cc",
        "src/dataflow/api/dataframe.cc",
        "src/dataflow/api/session.cc",
        "src/dataflow/serial/serializer.cc",
        "src/dataflow/planner/plan.cc",
        "src/dataflow/runtime/executor.cc",
        "src/dataflow/runtime/job_master.cc",
        "src/dataflow/runtime/byte_transport.cc",
        "src/dataflow/runtime/rpc_runner.cc",
        "src/dataflow/rpc/rpc_codec.cc",
        "src/dataflow/ai/plugin_runtime.cc",
        "src/dataflow/sql/sql_parser.cc",
        "src/dataflow/sql/sql_planner.cc",
        "src/dataflow/stream/stream.cc",
    ],
    hdrs = [
        "src/dataflow/core/value.h",
        "src/dataflow/core/table.h",
        "src/dataflow/core/csv.h",
        "src/dataflow/catalog/catalog.h",
        "src/dataflow/api/dataframe.h",
        "src/dataflow/api/session.h",
        "src/dataflow/serial/serializer.h",
        "src/dataflow/sql/sql_ast.h",
        "src/dataflow/sql/sql_errors.h",
        "src/dataflow/sql/sql_parser.h",
        "src/dataflow/sql/sql_planner.h",
        "src/dataflow/planner/plan.h",
        "src/dataflow/runtime/executor.h",
        "src/dataflow/runtime/byte_transport.h",
        "src/dataflow/runtime/rpc_contract.h",
        "src/dataflow/runtime/job_master.h",
        "src/dataflow/runtime/observability.h",
        "src/dataflow/runtime/rpc_runner.h",
        "src/dataflow/ai/plugin_runtime.h",
        "src/dataflow/rpc/rpc_codec.h",
        "src/dataflow/stream/stream.h",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "wordcount_demo",
    srcs = ["src/dataflow/examples/wordcount.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "df_demo",
    srcs = ["src/dataflow/examples/dataframe_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_demo",
    srcs = ["src/dataflow/examples/stream_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_stateful_demo",
    srcs = ["src/dataflow/examples/stream_stateful_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_state_container_demo",
    srcs = ["src/dataflow/examples/stream_state_container_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "sql_demo",
    srcs = ["src/dataflow/examples/sql_demo.cc"],
    deps = [":dataflow_core"],
)

cc_library(
    name = "dataflow_actor_rpc_codec",
    srcs = [
        "src/dataflow/rpc/actor_rpc_codec.cc",
        "src/dataflow/rpc/serialization.cc",
    ],
    hdrs = [
        "src/dataflow/rpc/actor_rpc_codec.h",
        "src/dataflow/rpc/serialization.h",
    ],
    deps = [":dataflow_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_transport",
    srcs = [
        "src/dataflow/transport/ipc_transport.cc",
    ],
    hdrs = [
        "src/dataflow/transport/ipc_transport.h",
    ],
    deps = [":dataflow_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_actor_runtime",
    srcs = [
        "src/dataflow/runtime/actor_runtime.cc",
    ],
    hdrs = [
        "src/dataflow/runtime/actor_runtime.h",
    ],
    deps = [
        ":dataflow_core",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_actor_runner",
    srcs = [
        "src/dataflow/runner/actor_runtime.cc",
    ],
    hdrs = [
        "src/dataflow/runner/actor_runtime.h",
    ],
    deps = [
        ":dataflow_actor_rpc_codec",
        ":dataflow_transport",
        ":dataflow_core",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "actor_rpc_scheduler",
    srcs = ["src/dataflow/examples/actor_rpc_scheduler.cc"],
    data = [
        ":dashboard_app_js",
        "src/dataflow/runner/dashboard/index.html",
    ],
    deps = [":dataflow_actor_runner"],
)

genrule(
    name = "dashboard_app_js",
    srcs = [
        "src/dataflow/runner/dashboard/app.ts",
        "scripts/build_dashboard_frontend.sh",
    ],
    outs = ["src/dataflow/runner/dashboard/app.js"],
    cmd = "$(location scripts/build_dashboard_frontend.sh) $(location src/dataflow/runner/dashboard/app.ts) $@",
    tools = ["scripts/build_dashboard_frontend.sh"],
)

cc_binary(
    name = "actor_rpc_worker",
    srcs = ["src/dataflow/examples/actor_rpc_worker.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "actor_rpc_client",
    srcs = ["src/dataflow/examples/actor_rpc_client.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "actor_rpc_smoke",
    srcs = ["src/dataflow/examples/actor_rpc_smoke.cc"],
    deps = [":dataflow_actor_runner"],
)
