load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

filegroup(
    name = "velaria_core_logical_sources",
    srcs = [
        "src/dataflow/core/logical/planner/plan.cc",
        "src/dataflow/core/logical/planner/plan.h",
        "src/dataflow/core/logical/sql/sql_ast.h",
        "src/dataflow/core/logical/sql/sql_errors.h",
        "src/dataflow/core/logical/sql/sql_parser.cc",
        "src/dataflow/core/logical/sql/sql_parser.h",
        "src/dataflow/core/logical/sql/sql_planner.cc",
        "src/dataflow/core/logical/sql/sql_planner.h",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_core_execution_sources",
    srcs = [
        "src/dataflow/core/execution/csv.cc",
        "src/dataflow/core/execution/csv.h",
        "src/dataflow/core/execution/table.cc",
        "src/dataflow/core/execution/table.h",
        "src/dataflow/core/execution/value.cc",
        "src/dataflow/core/execution/value.h",
        "src/dataflow/core/execution/runtime/executor.cc",
        "src/dataflow/core/execution/runtime/executor.h",
        "src/dataflow/core/execution/runtime/observability.h",
        "src/dataflow/core/execution/runtime/vector_index.cc",
        "src/dataflow/core/execution/runtime/vector_index.h",
        "src/dataflow/core/execution/serial/serializer.cc",
        "src/dataflow/core/execution/serial/serializer.h",
        "src/dataflow/core/execution/stream/binary_row_batch.cc",
        "src/dataflow/core/execution/stream/binary_row_batch.h",
        "src/dataflow/core/execution/stream/stream.cc",
        "src/dataflow/core/execution/stream/stream.h",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_core_contract_sources",
    srcs = [
        "src/dataflow/core/contract/api/dataframe.cc",
        "src/dataflow/core/contract/api/dataframe.h",
        "src/dataflow/core/contract/api/session.cc",
        "src/dataflow/core/contract/api/session.h",
        "src/dataflow/core/contract/catalog/catalog.cc",
        "src/dataflow/core/contract/catalog/catalog.h",
        "src/dataflow/core/contract/source_sink_abi.h",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_python_ecosystem_sources",
    srcs = [
        "//python_api:velaria_python_supported_sources",
        "//python_api:velaria_python_example_sources",
        "//python_api:velaria_python_experimental_sources",
        "src/dataflow/interop/python/python_module.cc",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_experimental_sources",
    srcs = [
        "src/dataflow/ai/plugin_runtime.cc",
        "src/dataflow/ai/plugin_runtime.h",
        "src/dataflow/experimental/rpc/actor_rpc_codec.cc",
        "src/dataflow/experimental/rpc/actor_rpc_codec.h",
        "src/dataflow/experimental/rpc/rpc_codec.cc",
        "src/dataflow/experimental/rpc/rpc_codec.h",
        "src/dataflow/experimental/rpc/serialization.cc",
        "src/dataflow/experimental/rpc/serialization.h",
        "src/dataflow/experimental/runner/actor_runtime.cc",
        "src/dataflow/experimental/runner/actor_runtime.h",
        "src/dataflow/experimental/runtime/actor_runtime.cc",
        "src/dataflow/experimental/runtime/actor_runtime.h",
        "src/dataflow/experimental/runtime/byte_transport.cc",
        "src/dataflow/experimental/runtime/byte_transport.h",
        "src/dataflow/experimental/runtime/job_master.cc",
        "src/dataflow/experimental/runtime/job_master.h",
        "src/dataflow/experimental/runtime/rpc_contract.h",
        "src/dataflow/experimental/runtime/rpc_runner.cc",
        "src/dataflow/experimental/runtime/rpc_runner.h",
        "src/dataflow/experimental/stream/actor_stream_runtime.cc",
        "src/dataflow/experimental/stream/actor_stream_runtime.h",
        "src/dataflow/experimental/transport/ipc_transport.cc",
        "src/dataflow/experimental/transport/ipc_transport.h",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "velaria_examples_sources",
    srcs = glob(["src/dataflow/examples/*.cc"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_core",
    srcs = [
        "src/dataflow/core/execution/value.cc",
        "src/dataflow/core/execution/table.cc",
        "src/dataflow/core/execution/csv.cc",
        "src/dataflow/core/contract/catalog/catalog.cc",
        "src/dataflow/core/contract/api/dataframe.cc",
        "src/dataflow/core/contract/api/session.cc",
        "src/dataflow/core/execution/serial/serializer.cc",
        "src/dataflow/core/logical/planner/plan.cc",
        "src/dataflow/core/execution/runtime/executor.cc",
        "src/dataflow/experimental/runtime/job_master.cc",
        "src/dataflow/experimental/runtime/byte_transport.cc",
        "src/dataflow/experimental/runtime/rpc_runner.cc",
        "src/dataflow/core/execution/runtime/vector_index.cc",
        "src/dataflow/experimental/rpc/rpc_codec.cc",
        "src/dataflow/experimental/transport/ipc_transport.cc",
        "src/dataflow/ai/plugin_runtime.cc",
        "src/dataflow/core/logical/sql/sql_parser.cc",
        "src/dataflow/core/logical/sql/sql_planner.cc",
        "src/dataflow/core/execution/stream/binary_row_batch.cc",
        "src/dataflow/experimental/stream/actor_stream_runtime.cc",
        "src/dataflow/core/execution/stream/stream.cc",
    ],
    hdrs = [
        "src/dataflow/core/execution/value.h",
        "src/dataflow/core/execution/table.h",
        "src/dataflow/core/execution/csv.h",
        "src/dataflow/core/contract/catalog/catalog.h",
        "src/dataflow/core/contract/api/dataframe.h",
        "src/dataflow/core/contract/api/session.h",
        "src/dataflow/core/execution/serial/serializer.h",
        "src/dataflow/core/logical/sql/sql_ast.h",
        "src/dataflow/core/logical/sql/sql_errors.h",
        "src/dataflow/core/logical/sql/sql_parser.h",
        "src/dataflow/core/logical/sql/sql_planner.h",
        "src/dataflow/core/logical/planner/plan.h",
        "src/dataflow/core/execution/runtime/executor.h",
        "src/dataflow/experimental/runtime/byte_transport.h",
        "src/dataflow/experimental/runtime/rpc_contract.h",
        "src/dataflow/experimental/runtime/job_master.h",
        "src/dataflow/core/execution/runtime/observability.h",
        "src/dataflow/experimental/runtime/rpc_runner.h",
        "src/dataflow/core/execution/runtime/vector_index.h",
        "src/dataflow/ai/plugin_runtime.h",
        "src/dataflow/experimental/rpc/rpc_codec.h",
        "src/dataflow/experimental/transport/ipc_transport.h",
        "src/dataflow/core/execution/stream/binary_row_batch.h",
        "src/dataflow/experimental/stream/actor_stream_runtime.h",
        "src/dataflow/core/contract/source_sink_abi.h",
        "src/dataflow/core/execution/stream/stream.h",
    ],
    visibility = ["//visibility:public"],
)

test_suite(
    name = "core_regression",
    tests = [
        ":planner_v03_test",
        ":source_sink_abi_test",
        ":sql_regression_test",
        ":stream_runtime_test",
        ":stream_strategy_explain_test",
        ":vector_runtime_test",
    ],
)

test_suite(
    name = "python_ecosystem_regression",
    tests = [
        "//python_api:velaria_python_supported_regression",
    ],
)

test_suite(
    name = "experimental_regression",
    tests = [
        ":stream_actor_credit_test",
    ],
)

cc_binary(
    name = "wordcount_demo",
    srcs = ["src/dataflow/examples/wordcount.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "df_demo",
    srcs = ["src/dataflow/examples/dataframe_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_demo",
    srcs = ["src/dataflow/examples/stream_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_sql_demo",
    srcs = ["src/dataflow/examples/stream_sql_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "_velaria_native",
    srcs = ["src/dataflow/interop/python/python_module.cc"],
    linkopts = select({
        "@bazel_tools//src/conditions:darwin": [
            "-undefined",
            "dynamic_lookup",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":dataflow_core",
        "@velaria_local_python//:headers",
    ],
    linkshared = True,
    visibility = ["//visibility:public"],
)

genrule(
    name = "velaria_pyext",
    srcs = [":_velaria_native"],
    outs = ["_velaria.so"],
    cmd = "cp $< $@",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "stream_stateful_demo",
    srcs = ["src/dataflow/examples/stream_stateful_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_state_container_demo",
    srcs = ["src/dataflow/examples/stream_state_container_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "stream_benchmark",
    srcs = ["src/dataflow/examples/stream_benchmark.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "sql_demo",
    srcs = ["src/dataflow/examples/sql_demo.cc"],
    deps = [":dataflow_core"],
)

cc_binary(
    name = "velaria_cli",
    srcs = ["src/dataflow/examples/velaria_cli.cc"],
    deps = [":dataflow_core"],
)

cc_library(
    name = "dataflow_actor_rpc_codec",
    srcs = [
        "src/dataflow/experimental/rpc/actor_rpc_codec.cc",
        "src/dataflow/experimental/rpc/serialization.cc",
    ],
    hdrs = [
        "src/dataflow/experimental/rpc/actor_rpc_codec.h",
        "src/dataflow/experimental/rpc/serialization.h",
    ],
    deps = [":dataflow_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_transport",
    deps = [":dataflow_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_stream_actor_runtime",
    deps = [":dataflow_core"],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_actor_runtime",
    srcs = [
        "src/dataflow/experimental/runtime/actor_runtime.cc",
    ],
    hdrs = [
        "src/dataflow/experimental/runtime/actor_runtime.h",
    ],
    deps = [
        ":dataflow_core",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "dataflow_actor_runner",
    srcs = [
        "src/dataflow/experimental/runner/actor_runtime.cc",
    ],
    hdrs = [
        "src/dataflow/experimental/runner/actor_runtime.h",
    ],
    deps = [
        ":dataflow_actor_rpc_codec",
        ":dataflow_transport",
        ":dataflow_core",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "actor_rpc_scheduler",
    srcs = ["src/dataflow/examples/actor_rpc_scheduler.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "actor_rpc_worker",
    srcs = ["src/dataflow/examples/actor_rpc_worker.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "actor_rpc_client",
    srcs = ["src/dataflow/examples/actor_rpc_client.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "actor_rpc_smoke",
    srcs = ["src/dataflow/examples/actor_rpc_smoke.cc"],
    deps = [":dataflow_actor_runner"],
)

cc_binary(
    name = "stream_actor_benchmark",
    srcs = ["src/dataflow/examples/stream_actor_benchmark.cc"],
    deps = [":dataflow_stream_actor_runtime"],
)

cc_binary(
    name = "tpch_q1_style_benchmark",
    srcs = ["src/dataflow/examples/tpch_q1_style_benchmark.cc"],
    deps = [":dataflow_stream_actor_runtime"],
)

cc_binary(
    name = "vector_search_benchmark",
    srcs = ["src/dataflow/examples/vector_search_benchmark.cc"],
    deps = [
        ":dataflow_actor_rpc_codec",
        ":dataflow_core",
    ],
)

cc_test(
    name = "sql_regression_test",
    srcs = ["src/dataflow/tests/sql_regression_test.cc"],
    deps = [":dataflow_core"],
)

cc_test(
    name = "stream_runtime_test",
    srcs = ["src/dataflow/tests/stream_runtime_test.cc"],
    deps = [":dataflow_core"],
)

cc_test(
    name = "stream_actor_credit_test",
    srcs = ["src/dataflow/tests/stream_actor_credit_test.cc"],
    deps = [":dataflow_stream_actor_runtime"],
)

cc_test(
    name = "planner_v03_test",
    srcs = ["src/dataflow/tests/planner_v03_test.cc"],
    deps = [":dataflow_core"],
)

cc_test(
    name = "source_sink_abi_test",
    srcs = ["src/dataflow/tests/source_sink_abi_test.cc"],
    deps = [":dataflow_core"],
)

cc_test(
    name = "stream_strategy_explain_test",
    srcs = ["src/dataflow/tests/stream_strategy_explain_test.cc"],
    deps = [":dataflow_core"],
)

cc_test(
    name = "vector_runtime_test",
    srcs = ["src/dataflow/tests/vector_runtime_test.cc"],
    deps = [
        ":dataflow_actor_rpc_codec",
        ":dataflow_core",
    ],
)
